--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -117,7 +117,7 @@
         </li>
 
         <li class="dropdown">
-          <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> Admin</a>
+          <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> {{user}}</a>
           <ul class="dropdown-menu animated flipInY">
             <li><a href="javascript:void(0)"><i class="zmdi m-r-md zmdi-hc-lg zmdi-account-box"></i>Perfil</a></li>
             <li><a href="javascript:void(0)"><i class="fa m-r-md fa-lg fa-sign-out"></i>Sair</a></li>
@@ -143,7 +143,7 @@
         </li>
 
         <li class="has-submenu">
-          <a href="listagem-usuarios.html">
+          <a href="{% url 'accounts:list' %}">
             <i class="menu-icon fa fa-user fa-lg"></i>
             <span class="menu-text">Usuários</span>
           </a>
