--- a/accounts/templates/list_user.html
+++ b/accounts/templates/list_user.html
@@ -39,7 +39,7 @@
             
             {% for u in users %}
             <tr>
-              <td><img src="assets/images/221.jpg" class="img-responsive avatar avatar-sm avatar-circle img-circle" alt="Avatar"></td>
+              <td><img src="{{u.photo}}" class="img-responsive avatar avatar-sm avatar-circle img-circle" alt="Avatar"></td>
               
               <td>{{u}}</td>
               <td>{{u.email}}</td>
