--- a/artisans/templates/detail_artisan.html
+++ b/artisans/templates/detail_artisan.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <h1>PERFIL</h1>
-<h2>{{artisan}}</h2>
+<h2>{{artisan.name}}</h2>
 
 <button type="button" role="button" class="btn btn-success btn-lg pull-right" data-toggle="modal" data-target="#update_user">
 	<i class="fa fa-plus"></i> Editar {{artisan}}
