--- a/artisans/templates/list_artisan.html
+++ b/artisans/templates/list_artisan.html
@@ -14,7 +14,7 @@
             </header>
             <header class="col-md-6 right">
               <div style="padding-top:3%;">
-                <button type="button" role="button" class="btn btn-success btn-lg pull-right" data-toggle="modal" data-target="#addUser"><i class="fa fa-plus"></i> Add Artesãos</button>
+                <a href="{% url 'artisans:new' %}" class="btn btn-success btn-lg pull-right"><i class="fa fa-plus"></i> Artesão</a>
               </div>
             </header><!-- .widget-header -->
           </div>
@@ -63,48 +63,6 @@
     </div><!-- .widget-body -->
   </div><!-- .widget -->
 </div><!-- END column -->
-
-
-<!-- add User Modal -->
-<div class="modal fade" id="addUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title text-center" id="myModalLabel">Novo Artesão</h4>
-      </div>
-      <div class="modal-body">
-        
-
-        <form method="POST">
-          {% csrf_token %}
-          
-          <div class="row">
-            <div class="col-md-12">
-            <div class="col-md-4 col-md-offset-4">
-              <input name="" class="dropzone form-control input-sm" value="" data-plugin="dropzone" data-options="{ url: 'api/dropzone'}" placeholder="Foto" style="text-align:center;">
-            </div>
-            </div>
-          </div>
-          
-          {% for field in form %}
-          <div class="form-group"> 
-            <label for="{{field.auto_id}}" class="control-label">{{field.label}}</label>
-            {% render_field field class="form-control" placeholder=field.label %}
-          </div>
-          {% endfor %}
-      
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-            <button type="submit" class="btn btn-success">Cadastrar</button>
-          </div>
-        </form>
-
-
-      </div>
-    </div>
-  </div>
-</div>
 
 {% endblock %}
 
