--- a/artisans/templates/new_artisan.html
+++ b/artisans/templates/new_artisan.html
@@ -2,13 +2,73 @@
 {% load widget_tweaks %}
 {% block content %}
 
+
 <form method="POST">
 	{% csrf_token %}
-	{% for field in form  %}
-		 <label for="{{field.auto_id}}" class="active">{{field.label}}</label>
-		 {% render_field field %}
-	{% endfor %}
-	<button type="submit">Próximo</button>
+	<div class="row md-margin">
+
+		<div class="col-sm-12 col-md-6">
+			<div class="form-group"> 
+				<label for="{{form.name.auto_id}}" class="control-label">{{form.name.label}}</label>
+				{% render_field form.name class="form-control" placeholder=form.name.label autofocus=True %}
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-6">
+			<div class="form-group"> 
+				<label for="photo_artisan" class="control-label">Foto do Artesão</label>
+				<input type="file" class="btn-primary form-control" id="photo_artisan" name="photo">
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-6">
+			<div class="form-group"> 
+				<label for="{{form.email.auto_id}}" class="control-label">{{form.email.label}}</label>
+				{% render_field form.email class="form-control" placeholder=form.email.label %}
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-6">
+			<div class="form-group"> 
+				<label for="{{form.phone.auto_id}}" class="control-label">{{form.phone.label}}</label>
+				{% render_field form.phone class="form-control" placeholder=form.phone.label %}
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-6">
+			<div class="form-group"> 
+				<label for="{{form.phone_optional.auto_id}}" class="control-label">{{form.phone_optional.label}}</label>
+				{% render_field form.phone_optional class="form-control" placeholder=form.phone_optional.label %}
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-6">
+			<div class="form-group"> 
+				<label for="{{form.cpf.auto_id}}" class="control-label">{{form.cpf.label}}</label>
+				{% render_field form.cpf class="form-control" placeholder=form.cpf.label %}
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-12">
+			<div class="form-group"> 
+				<label for="{{form.biography.auto_id}}" class="control-label">{{form.biography.label}}</label>
+				{% render_field form.biography class="form-control" placeholder=form.biography.label %}
+			</div>
+		</div>
+
+	</div>
+
+	<div class="modal-footer">
+		<button type="submit" class="btn btn-success">Próximo</button>
+	</div>
 </form>
 
 {% endblock %}
+<!-- 
+	<div class="row">
+		<div class="col-md-12">
+			<div class="col-md-4 col-md-offset-4">
+				<input name="" class="dropzone form-control input-sm" value="" data-plugin="dropzone" data-options="{ url: 'api/dropzone'}" placeholder="Foto" style="text-align:center;">
+			</div>
+		</div>
+	</div> -->
