--- a/core/templates/imports.html
+++ b/core/templates/imports.html
@@ -32,6 +32,7 @@
   <!-- IMPORTS CSS CUSTOM -->
   <link rel="stylesheet" href="{% static 'css/core.css' %}">
   <link rel="stylesheet" href="{% static 'css/app.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/ajusts.css' %}">
   <!-- /IMPORTS CSS CUSTOM -->
 
   <!-- endbuild -->
