--- a/categories/templates/list_category.html
+++ b/categories/templates/list_category.html
@@ -41,7 +41,7 @@
               <td>{{category.description}}</td>
 
               <td class="text-center">
-                <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-eye"></i></a>
+                <a href="{% url 'categories:detail' category.pk %}" class="btn btn-primary btn-sm"><i class="fa fa-eye"></i></a>
                 <button type="button" role="button" class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
               </td>
             </tr>
