--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -119,6 +119,13 @@
           </a>
         </li>
 
+        <li class="has-submenu">
+          <a href="{% url 'categories:list_subcategory' %}">
+            <i class="menu-icon fa fa-user fa-lg"></i>
+            <span class="menu-text">Subcategorias</span>
+          </a>
+        </li>
+
       </ul><!-- .app-menu -->
     </div><!-- .menubar-scroll-inner -->
   </div><!-- .menubar-scroll -->
