--- a/artisans/templates/detail_artisan.html
+++ b/artisans/templates/detail_artisan.html
@@ -4,53 +4,268 @@
 
 {% block content %}
 
-<h1>PERFIL</h1>
-<h2>{{artisan.name}}</h2>
-<h4>{{artisan.address.street}}</h4>
-
-<button type="button" role="button" class="btn btn-success btn-lg pull-right" data-toggle="modal" data-target="#update_user">
-	<i class="fa fa-plus"></i> Editar {{artisan}}
-</button>
-
-<!-- update User Modal -->
-<div class="modal fade" id="update_user" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title text-center" id="myModalLabel">Novo Artesão</h4>
-      </div>
-      <div class="modal-body">
-        
-
-        <form method="POST">
-          {% csrf_token %}
-          
-          <div class="row">
-            <div class="col-md-12">
-            <div class="col-md-4 col-md-offset-4">
-              <input name="" class="dropzone form-control input-sm" value="" data-plugin="dropzone" data-options="{ url: 'api/dropzone'}" placeholder="Foto" style="text-align:center;">
+    <div class="profile-header">
+        <div class="profile-cover">
+            <div class="cover-user m-b-lg">
+                <div>
+                    <a data-toggle="modal" data-target="#update_artisan" class="cover-icon"><i class="fa fa-pencil"></i></a>
+                </div>
+                <div>
+                    <div class="avatar avatar-xl avatar-circle">
+                        <a href="javascript:void(0)">
+                            <img class="img-responsive" src="{{ artisan.photo }}" alt="avatar"/>
+                        </a>
+                    </div><!-- .avatar -->
+                </div>
+                <div>
+                    <a data-toggle="modal" data-target="#address" class="cover-icon"><i class="fa fa-map-marker"></i></a>
+                </div>
             </div>
+            <div class="text-center">
+                <h4 class="profile-info-name m-b-lg"><a href="javascript:void(0)" class="title-color">{{ artisan.name }}</a></h4>
+                <div>
+                    <a href="javascript:void(0)" class="m-r-xl theme-color"><i class="fa fa-phone m-r-xs"></i> {{ artisan.phone }}</a>
+                    <a href="javascript:void(0)" class="theme-color"><i class="fa fa-map-marker m-r-xs"></i>{{ artisan.address.city }}, {{ artisan.address.state }}</a>
+                </div>
             </div>
-          </div>
-          
-          {% for field in form %}
-          <div class="form-group"> 
-            <label for="{{field.auto_id}}" class="control-label">{{field.label}}</label>
-            {% render_field field class="form-control" placeholder=field.label %}
-          </div>
-          {% endfor %}
-      
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-            <button type="submit" class="btn btn-success">Atualizar</button>
-          </div>
-        </form>
+        </div><!-- .profile-cover -->
+
+        <div class="promo-footer">
+            <div class="row no-gutter">
+                <div class="col-sm-2 col-sm-offset-3 col-xs-6 promo-tab">
+                    <div class="text-center">
+                        <small>CPF</small>
+                        <h4 class="m-0 m-t-xs">{{ artisan.cpf }}</h4>
+                    </div>
+                </div>
+                <div class="col-sm-2 col-xs-6 promo-tab">
+                    <div class="text-center">
+                        <small>Artesanatos</small>
+                        <h4 class="m-0 m-t-xs">Tantos artesanatos</h4>
+                    </div>
+                </div>
+                <div class="col-sm-2 col-xs-12 promo-tab">
+                    <div class="text-center">
+                        <small>Status</small>
+                        <h4 class="m-0 m-t-xs">
+                            {{ artisan.get_status_display }}
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div><!-- .promo-footer -->
+    </div><!-- .profile-header -->
 
 
-      </div>
+    <div class="row">
+        <hr>
+        <div class="media-head">
+            <h3 class="text-center">Informações do Artesão</h3>
+        </div>
+        <hr>
     </div>
-  </div>
-</div>
+
+    <div class="wrap">
+        <section class="app-content">
+            <div class="row">
+                <div class="col-md-8">
+                    <div id="profile-tabs" class="nav-tabs-horizontal white m-b-lg">
+                        <div class="media stream-post">
+                            <div class="media-head">
+                                <h4 class="widget-title">Biografia</h4>
+                                <hr>
+                            </div>
+                            <div class="media-body">
+                                <div class="list-group">
+                                    <small class="media-meta">Publicada em:</small>
+                                    <div class="stream-body m-t-xl">
+                                        {{ artisan.biography|linebreaks }}
+                                    </div>
+                                </div>
+                            </div>
+                        </div><!-- .stream-post -->
+                    </div><!-- #profile-components -->
+                </div><!-- END column -->
+
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-md-12 col-sm-6">
+                            <div class="widget navigation-widget">
+                                <div class="widget-header p-h-lg p-v-md">
+                                    <h4 class="widget-title">Contatos</h4>
+                                    <hr>
+                                </div>
+                                <div class="list-group">
+                                    <a href="#" class="list-group-item"><i class="zmdi m-r-md zmdi-hc-lg zmdi-email"></i> {{ artisan.email }}</a>
+                                    <a href="#" class="list-group-item"><i class="zmdi m-r-md zmdi-phone"></i> {{ artisan.phone }}</a>
+                                    <a href="#" class="list-group-item"><i class="zmdi m-r-md zmdi-phone"></i> {{ artisan.phone_optional }}</a>
+                                </div>
+                            </div><!-- .widget -->
+                        </div><!-- END column -->
+                    </div><!-- .row -->
+
+                </div><!-- END column -->
+            </div><!-- .row -->
+            <div class="row">
+                <div class="media-head">
+                    <h3 class="text-center">Artesanatos</h3>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <div class="widget">
+                        <header class="widget-header">
+                            <h4 class="widget-title text-center">Cadeira</h4>
+                        </header><!-- .widget-header -->
+                        <hr class="widget-separator">
+                        <div class="widget-body text-center">
+                            <div class="big-icon m-b-md watermark">
+                                <img src="assets/images/cadeira.jpg" class="img-rounded" height="400" width="150">
+                            </div>
+                            <h4 class="m-b-md">Sobre o artesanato</h4>
+                            <p class="text-muted m-b-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat officiis aperiam incidunt.</p>
+                            <a href="#" class="btn p-v-xl btn-default">Ver</a>
+                        </div><!-- .widget-body -->
+                    </div><!-- .widget -->
+                </div><!-- END column -->
+            </div><!-- /row -->
+
+            <!-- Likes/comments Modal -->
+            <div id="likesModal" class="modal fade" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title">3 people like this</h4>
+                        </div>
+                        <div class="modal-body">
+                            <ul class="list-group m-0">
+                                <li class="list-group-item">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <a href="javascript:void(0)" class="avatar avatar-sm">
+                                                <img class="img-responsive" src="assets/images/221.jpg" alt="avatar"/>
+                                            </a><!-- .avatar -->
+                                        </div>
+                                        <div class="media-body">
+                                            <h5 class="media-heading m-0"><a href="javascript:void(0)">John Doe</a></h5>
+                                        </div>
+                                        <div class="media-right">
+                                            <a href="javascript:void(0)" class="btn btn-sm btn-default"><i class="fa fa-rss m-r-xs"></i>Follow</a>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <a href="javascript:void(0)" class="avatar avatar-sm">
+                                                <img class="img-responsive" src="assets/images/104.jpg" alt="avatar"/>
+                                            </a><!-- .avatar -->
+                                        </div>
+                                        <div class="media-body">
+                                            <h5 class="media-heading m-0"><a href="javascript:void(0)">Sara Adams</a></h5>
+                                        </div>
+                                        <div class="media-right">
+                                            <a href="javascript:void(0)" class="btn btn-sm btn-default"><i class="fa fa-user-plus m-r-xs"></i>Add Freind</a>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <a href="javascript:void(0)" class="avatar avatar-sm">
+                                                <img class="img-responsive" src="assets/images/101.jpg" alt="avatar"/>
+                                            </a><!-- .avatar -->
+                                        </div>
+                                        <div class="media-body">
+                                            <h5 class="media-heading m-0"><a href="javascript:void(0)">John Doe</a></h5>
+                                        </div>
+                                        <div class="media-right">
+                                            <a href="javascript:void(0)" class="btn btn-sm btn-default"><i class="fa fa-user-plus m-r-xs"></i>Add Friend</a>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div><!-- /.modal-content -->
+                </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+            <!-- APP FOOTER -->
+        </section>
+    </div>
+
+
+    <!-- update User Modal -->
+    <div class="modal fade" id="update_artisan" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title text-center" id="myModalLabel">Novo Artesão</h4>
+                </div>
+                <div class="modal-body">
+
+
+                    <form method="POST">
+                        {% csrf_token %}
+
+                        {% for field in form %}
+                            <div class="form-group">
+                                <label for="{{field.auto_id}}" class="control-label">{{field.label}}</label>
+                                {% render_field field class="form-control" placeholder=field.label %}
+                            </div>
+                        {% endfor %}
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                            <button type="submit" class="btn btn-success">Atualizar</button>
+                        </div>
+                    </form>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="address" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title text-center" id="myModalLabel">Endereço</h4>
+                </div>
+                <div class="modal-body">
+
+
+                    <form method="POST">
+                        {% csrf_token %}
+
+                        {% for field in form_address %}
+                            <div class="form-group">
+                                <label for="{{field.auto_id}}" class="control-label">{{field.label}}</label>
+                                {% render_field field class="form-control" placeholder=field.label %}
+                            </div>
+                        {% endfor %}
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                            <button type="submit" class="btn btn-success">Atualizar</button>
+                        </div>
+                    </form>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 {% endblock %}
+
+
+
