--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -122,21 +122,21 @@
 
                     <li class="has-submenu">
                         <a href="{% url 'categories:list' %}">
-                            <i class="menu-icon fa fa-user fa-lg"></i>
+                            <i class="menu-icon fa fa-tags fa-lg"></i>
                             <span class="menu-text">Categorias</span>
                         </a>
                     </li>
 
                     <li class="has-submenu">
                         <a href="{% url 'categories:list_subcategory' %}">
-                            <i class="menu-icon fa fa-user fa-lg"></i>
+                            <i class="menu-icon fa fa-tag fa-lg"></i>
                             <span class="menu-text">Subcategorias</span>
                         </a>
                     </li>
 
                     <li class="has-submenu">
                         <a href="{% url 'categories:list_material' %}">
-                            <i class="menu-icon fa fa-user fa-lg"></i>
+                            <i class="menu-icon fa fa-cube fa-lg"></i>
                             <span class="menu-text">Materiais</span>
                         </a>
                     </li>
