--- a/artisans/templates/modal_status.html
+++ b/artisans/templates/modal_status.html
@@ -6,7 +6,8 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title text-center" id="myModalLabel">Modificar Status</h4>
                 <div class="alert alert-danger" role="alert">
-                    A modificação de status pode afetar na forma de exibição ou no nível de acesso.
+                    A modificação de status pode afetar na forma de exibição do artesão.<br>
+                    Caso seja desativado ou bloqueado o artesão não será exibido para visitantes.
                 </div>
             </div>
             <div class="modal-body">
