get all artifatcs

--- a/artisans/templates/detail_artisan.html
+++ b/artisans/templates/detail_artisan.html
@@ -125,7 +125,7 @@
             </div><!-- .row -->
             <div class="row">
                 <div class="media-head">
-                    <h3 class="text-center">Artesanatos</h3>
+                    <h3 class="text-center">Útimos Artesanatos</h3>
                 </div>
                 <hr>
             </div>
@@ -153,10 +153,13 @@
                 </div><!-- END column -->
               {% endfor %}
 
+              <div class="col-md-12">
+                  <a href="#" class="btn btn-default pull-right">Ver todos</a>
+              </div>
             </div><!-- /row -->
 
         </section>
-    </div>
+    </div><br>
 
 {% include "modal_update_artisan.html" %}
 {% include "modal_update_address.html" %}
